style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap');

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
html{
    font-family:'Montserrat', sans-serif;
    font-size: 10px;
    scroll-behavior: smooth;
}


.main-section-wrapper {
    display: flex;
    justify-content: flex-end;
}

.main-photo img{
    max-width: 350px;
    margin: 100px 100px;
    border-radius: 15px;
}

.main-text-wrapper{
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    text-align: right;
    justify-content: center;

}
.main-text-wrapper h1{
    font-size: 6rem;
    font-weight: 700;
    width: 350px;
}
.main-text-wrapper p{
    max-width: 310px;
    font-size: 1.8rem;
    line-height: 1.6;
    margin-top: 50px;
    margin-bottom: 50px;
}

.sci {
    display: flex;
    flex-direction: row;
    margin-bottom: 70px;
}

.sci li {
    list-style: none;
    margin-left: 10px;

}

.sci li a {
    position: relative;
    display: grid;
    place-items: center;
    width: 50px;
    height: 50px;
    text-decoration: none;
    border: 2px solid #000;
    margin: 10px 0 0;
    border-radius: 10px;

}

.sci li a:hover {
    background: lightblue;
}

.sci li a img {
    max-width: 20px;

}

@media (min-width: 501px) and (max-width: 990px) {

.main-section-wrapper {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.main-text-wrapper{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding-top: 150px;
    /* width: 500px; */
}

.main-text-wrapper h1{
    font-size: 5rem;
    font-weight: 700;
    padding-left: 25px;
    padding-right: 25px;
    max-width: 750px;
    text-align: center;
}

.main-text-wrapper p{
    max-width: 310px;
    font-size: 1.8rem;
    line-height: 1.6;
    margin-top: 50px;
    margin-bottom: 50px;
    text-align: center;;
}

.main-photo img{
    display: none;
}

}

@media and (max-width: 500px) {

.main-section-wrapper {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.main-text-wrapper h1{
    font-size: 5rem;
    font-weight: 700;
    text-align: center;
}

.main-photo img{
    display: none;
}

.main-text-wrapper{
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: right;
    justify-content: center;
    padding-top: 150px;
    /* width: 500px; */
}

}

